2012-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	* lib/ld-lib.exp (run_cc_link_tests): Properly check linker
	warnings.

2012-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	* lib/ld-lib.exp (ar_simple_create): Pass -rc to ar.

2012-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14926
	* ld-elf/pr14926.d: New file.
	* ld-elf/pr14926.s: Likewise.

2012-12-07  Alan Modra  <amodra@gmail.com>

	* ld-elf/comm-data.exp: Revert last change.
	* ld-elf/comm-data5.d: xfail frv-linux.

2012-12-07  Alan Modra  <amodra@gmail.com>

	* ld-elf/shared.exp (libneeded1a.so): Override any system
	supplied --as-needed or --add-needed flag.

2012-12-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14915
	* ld-elf/shared.exp (build_tests): Test --add-needed,
	--copy-dt-needed-entries, --no-add-needed and
	--no-copy-dt-needed-entries with -shared.
	Add tests for --no-add-needed and --no-copy-dt-needed-entries
	with -shared.

2012-12-06  Alan Modra  <amodra@gmail.com>

	* ld-elf/comm-data4.d, ld-elf/comm-data4.s: New test.
	* ld-elf/comm-data5.d, ld-elf/comm-data5.s: New test.
	* ld-elf/comm-data.exp: Run them.

2012-12-04  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/shared.exp (build_tests): Build libneeded1b.so,
	libneeded1a.so and libneeded1c.o.
	(run_tests): Test --add-needed and --copy-dt-needed-entries.
	Add tests for --no-add-needed and --no-copy-dt-needed-entries.

	* ld-elf/needed1.out: New file.
	* ld-elf/needed1a.c: Likewise.
	* ld-elf/needed1b.c: Likewise.
	* ld-elf/needed1c.c: Likewise.

2012-12-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-mips-elf/attr-gnu-4-45.d: Add missing "readelf" keyword.
	Update dump according to current output.

2012-12-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* ld-mips-elf/attr-gnu-4-12.d: Update the warning message.
	* ld-mips-elf/attr-gnu-4-13.d: Likewise.
	* ld-mips-elf/attr-gnu-4-14.d: Likewise.
	* ld-mips-elf/attr-gnu-4-15.d: Likewise.
	* ld-mips-elf/attr-gnu-4-21.d: Likewise.
	* ld-mips-elf/attr-gnu-4-23.d: Likewise.