@@ -1,5 +1,10 @@
 2012-12-07  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* lib/ld-lib.exp (check_lto_available): New.  Check if compiler
+	supports LTO.
+
+2012-12-07  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* lib/ld-lib.exp (run_cc_link_tests): Properly check linker
 	warnings.
 
